compiler/fir/analysis-tests/testData/resolve/extraCheckers/kt72164.kt
fun main() {
    val <!UNUSED_VARIABLE!>y<!> = ++<!VARIABLE_EXPECTED!><!VARIABLE_EXPECTED!>5<!>++<!>
}
